# potator

./: .gitlab-ci.yml  Makefile.gcw  Makefile.gp2x  Makefile.nds  Makefile.od  Makefile.win  README.md  appveyor.yml  makefile  potator.cfg
common/: controls.c  controls.h  gpu.c  gpu.h  io.c  log.c  memory.h  memorymap.c  memorymap.h  sound.c  sound.h  supervision.h  timer.c  timer.h  types.h  watara.c
common/m6502/: m6502.c  m6502.h  tables.h
distrib/: mkopk.sh
distrib/potator/: default.retrofw.desktop  potator.lnk
ipkfiles/: control
platform/GP2X/: main.c  menues.c  menues.h
platform/GP2X/lib/: minimal.c  minimal.h
platform/NDS/: main.c
platform/PSP/: Makefile  callbacks.c  main.c  vram.c
platform/SDL/: main.c
platform/SDL2/: CMakeLists.txt  main.c  sdl2-config.cmake
platform/WIN/: main.c  resource.h  resources.rc
platform/emscripten/: Makefile  potator_shell.html
platform/libretro/: Makefile  Makefile.common  libretro.c  libretro_core_options.h
platform/libretro/jni/: Android.mk
platform/opendingux/: main_od.c  menu.c  shared.h
platform/rs97/: main_od.c  menu.c  readme.txt  shared.h  sound_od.c
platform/rs97/data/: potator_background.h
